--- a/packages/i18n/package.json
+++ b/packages/i18n/package.json
@@ -13,5 +13,19 @@
 	},
 	"peerDependencies": {
 		"react": "^18.0.0"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.28.5",
+		"@babel/plugin-transform-runtime": "^7.28.5",
+		"@babel/preset-env": "^7.28.5",
+		"@babel/preset-react": "^7.28.5",
+		"@babel/preset-typescript": "^7.28.5",
+		"@types/jest": "^29.5.14",
+		"babel-jest": "^29.7.0",
+		"jest": "^29.7.0",
+		"jest-environment-jsdom": "^29.7.0"
+	},
+	"scripts": {
+		"test": "jest"
 	}
 }
