Fix i18n breakages from react-i18next v15 and i18next-http-backend v3
- Fix loadPath interpolation: http-backend v3 uses the i18next core
  interpolator which respects our custom single-brace prefix, so
  change {{lng}}/{{ns}} to {lng}/{ns} in the load path template.

- Fix Trans component crash: react-i18next v15's fixComponentProps
  calls .key on every element in the components array, which crashes
  on null. Switch from array syntax with null placeholders to named
  object syntax, and update translation strings to use named tags
  (<strong>, <link>, <code>) instead of numbered ones (<1>).

--- a/packages/settings/src/translations/locales/en/wp-admin-settings.json
+++ b/packages/settings/src/translations/locales/en/wp-admin-settings.json
@@ -42,9 +42,9 @@
 	"checkout.gateways_description": "Installed gateways are listed below. Drag and drop gateways to control their display order at the Point of Sale. Payment Gateways enabled here will be available at the Point of Sale.",
 	"checkout.gateway_id": "Gateway ID",
 	"checkout.enable_pro_gateways": "To enable all WooCommerce gateways please enable the Pro plugin.",
-	"checkout.gateway_settings_pos_only": "This will change the settings for the POS only. If you would like to change gateway settings for online and POS, please visit the <1>WooCommerce Settings</1>.",
-	"access.default_roles_warning": "By default, access to the POS is limited to Administrator, Shop Manager and Cashier roles. It is recommended that you <1>do not change</1> the default settings unless you are fully aware of the consequences.",
-	"access.visit_documentation": "For more information please visit the <1>documentation</1>.",
+	"checkout.gateway_settings_pos_only": "This will change the settings for the POS only. If you would like to change gateway settings for online and POS, please visit the <link>WooCommerce Settings</link>.",
+	"access.default_roles_warning": "By default, access to the POS is limited to Administrator, Shop Manager and Cashier roles. It is recommended that you <strong>do not change</strong> the default settings unless you are fully aware of the consequences.",
+	"access.visit_documentation": "For more information please visit the <link>documentation</link>.",
 	"sessions.sessions": "Sessions",
 	"sessions.manage_description": "Manage active user sessions. You can view all logged-in users, see their devices, and terminate sessions if needed.",
 	"sessions.all_users": "All Users",
@@ -78,7 +78,7 @@
 	"sessions.web_application": "Web Application",
 	"license.support_development": "If you would like to support the development of WCPOS, please consider purchasing a Pro license.",
 	"license.thank_you": "Thank You!",
-	"license.activated": "License <1>{number}</1> has been activated.",
+	"license.activated": "License <code>{number}</code> has been activated.",
 	"license.ongoing_support": "Your support helps fund the ongoing development of WCPOS.",
 	"license.deactivate": "Deactivate",
 	"license.license_key": "License Key",
