fix: update checkout settings UI to show granular email toggles
PR #502 added per-email-type controls and cashier emails to the backend,
but the frontend still rendered simple boolean toggles. This updates the
checkout settings page to surface the full email settings structure with
master toggles and individual email type checkboxes.

--- a/packages/settings/src/translations/locales/en/wp-admin-settings.json
+++ b/packages/settings/src/translations/locales/en/wp-admin-settings.json
@@ -35,9 +35,19 @@
 	"settings.authorize_via_url_param_tip": "Some servers disable the Authorization header, this will use a URL param instead",
 	"checkout.completed_order_status": "Completed order status",
 	"checkout.completed_order_status_tip": "Change the default order status for POS sales",
-	"checkout.send_admin_emails": "Send admin emails",
-	"checkout.send_customer_emails": "Send customer emails",
-	"checkout.notification_emails_tip": "Send WooCommerce notification emails for POS orders",
+	"checkout.admin_emails": "Admin emails",
+	"checkout.admin_emails_tip": "WooCommerce admin notification emails for POS orders",
+	"checkout.customer_emails": "Customer emails",
+	"checkout.customer_emails_tip": "WooCommerce customer notification emails for POS orders",
+	"checkout.cashier_emails": "Cashier emails",
+	"checkout.cashier_emails_tip": "Send new order notification to the cashier who processed the POS order",
+	"checkout.email_new_order": "New order",
+	"checkout.email_cancelled_order": "Cancelled order",
+	"checkout.email_failed_order": "Failed order",
+	"checkout.email_on_hold_order": "Order on hold",
+	"checkout.email_processing_order": "Processing order",
+	"checkout.email_completed_order": "Completed order",
+	"checkout.email_refunded_order": "Refunded order",
 	"checkout.gateways": "Gateways",
 	"checkout.gateways_description": "Installed gateways are listed below. Drag and drop gateways to control their display order at the Point of Sale. Payment Gateways enabled here will be available at the Point of Sale.",
 	"checkout.gateway_id": "Gateway ID",
