fix: improve license page design and add Pro installation instructions
Update logo, center layout, and add info notice directing existing
Pro license holders to the installation docs.

--- a/packages/settings/src/translations/locales/en/wp-admin-settings.json
+++ b/packages/settings/src/translations/locales/en/wp-admin-settings.json
@@ -86,7 +86,10 @@
 	"sessions.android_application": "Android Application",
 	"sessions.desktop_application": "Desktop Application",
 	"sessions.web_application": "Web Application",
-	"license.support_development": "If you would like to support the development of WCPOS, please consider purchasing a Pro license.",
+	"license.support_development": "Unlock extra features and support ongoing development by upgrading to WCPOS Pro.",
+	"license.existing_license_prefix": "Already have a Pro license? Follow the",
+	"license.existing_license_link": "installation instructions",
+	"license.existing_license_suffix": "to download and install the Pro plugin. Once installed, you can safely remove the free version.",
 	"license.thank_you": "Thank You!",
 	"license.activated": "License <code>{number}</code> has been activated.",
 	"license.ongoing_support": "Your support helps fund the ongoing development of WCPOS.",
